--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,15 +1,8 @@
-* {
+*{
     padding: 0;
     margin: 0;
+    vertical-align: top;
     box-sizing: border-box;
-}
-h1 {
-    text-align: center;
-    background-color: black;
-    color: red;
-    width: fit-content;
-    margin: 40px  auto;
-    padding: 10px 20px;
 }
 body{
     display: flex;
@@ -17,7 +10,14 @@ body{
     flex-direction: column;
     align-items: center;
 }
-td {
+h1{
+    padding: 10px;
+    margin: 15px 0;
+}
+table{
+    border-collapse: collapse;
+}
+td{
     width: 60px;
     height: 60px;
 }
